<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.washington.briluu.lifecounter.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:elevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/player1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/p1Life" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/playerOneLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/minus5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/p1_minus5"
                android:layout_weight="1" />

            <Button
                android:text="@string/minus1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/p1_minus1"
                android:layout_weight="1" />

            <Button
                android:text="@string/plus1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/p1_plus1"
                android:layout_weight="1" />

            <Button
                android:text="@string/plus5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/p1_plus5"
                android:layout_weight="1" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/p2Life" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/playerTwoLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/minus5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/p2_minus5"
                android:layout_weight="1" />

            <Button
                android:text="@string/minus1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/p2_minus1"
                android:layout_weight="1" />

            <Button
                android:text="@string/plus1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/p2_plus1"
                android:layout_weight="1" />

            <Button
                android:text="@string/plus5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/p2_plus5"
                android:layout_weight="1" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/player3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/p3Life"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/playerThreeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/minus5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/p3_minus5"
                android:layout_weight="1" />

            <Button
                android:text="@string/minus1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/p3_minus1"
                android:layout_weight="1" />

            <Button
                android:text="@string/plus1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/p3_plus1"
                android:layout_weight="1" />

            <Button
                android:text="@string/plus5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/p3_plus5"
                android:layout_weight="1" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/player4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/p4Life" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/playerFourLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/minus5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p4_minus5"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/minus1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p4_minus1"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/plus1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p4_plus1"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/plus5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p4_plus5"
                    android:layout_weight="1"
                    android:clickable="false" />

            </LinearLayout>


        </RelativeLayout>

        <TextView
            android:id="@+id/alert"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="end|top" />

    </LinearLayout>


</RelativeLayout>
